# kaiten_time_logger

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: logger.py  main.py
src/ai/: base_llm.py  constants.py  summary_generator.py  yandex_provider.py
src/core/: config.py  git_manager.py  kaiten_api.py  work_calendar.py
src/ui/: components.py  main_window.py  settings_window.py
src/utils/: logger.py  resources.py
tests/: test_git_manager.py  test_on_card_paste.py  test_parse_time.py
